# GETDecoder

./: .gitignore  CMakeLists.txt  README.md
include/: GETBasicFrame.hh  GETCoboFrame.hh  GETDecoder.hh  GETHeaderBase.hh  GETMutantFrame.hh  GetDecodernew.h  TGetEventStore.h  TParameterStrings.h  TProcessorParameter.h  TRawDataFadc.h  artget_dict.cc  artget_linkdef.h
src/: GETCoboFrame.cc  GETDecoder.cc  GETFrameInfo.cc  GETMutantFrame.cc  test.cc
src_getevt/: TProcessor.cc
